--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "axios": "^1.7.7",
     "clsx": "^2.1.0",
     "dayjs": "^1.11.13",
+    "iron-session": "^8.0.3",
     "next": "^14.1.0",
     "next-auth": "^4.24.10",
     "next-intl": "^3.11.3",
